--- a/src/components/theme-switcher/styles.scss
+++ b/src/components/theme-switcher/styles.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	padding: 15px 25px;
+	padding: 15px 25px 0 0;
 
 	@include themify() {
 		background-color: t("pricing-background");
